# moz2_chassis_mujoco

./: .gitignore  CMakeLists.txt  DELIVERY_REPORT.md  FINAL_SUMMARY.md  README.md  SCRIPTS_README.md  VIO_INTEGRATION_GUIDE.md  VIO_PROJECT_SUMMARY.md  VIO_TESTING_GUIDE.md  start.sh  start_keyboard_mode.sh  start_vio_mode.sh  verify.sh
.claude/plans/: vio-integration-plan.md
docs/superpowers/plans/: 2026-06-30-swerve-chassis-plan.md
docs/superpowers/specs/: 2026-06-30-swerve-chassis-design.md
models/: wheel_base_modified.xml
models/meshes/: RFW_RAW.STL
src/: main.cpp
src/control/: input_interface.h  keyboard_input.cpp  keyboard_input.h  vio_input.cpp  vio_input.h
src/kinematics/: chassis_geometry.h  swerve_kinematics.cpp  swerve_kinematics.h
src/simulation/: mujoco_simulator.cpp  mujoco_simulator.h
src/vio/: vio_device.cpp  vio_device.h
